--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,11 @@ import MyPersonalSideSection from '../components/sections/about/MyPersonalSideSe
 import MyApproachSection from '../components/sections/about/MyApproachSection.astro';
 ---
 
-<Layout>
+<Layout
+	title="About David Lopez | Full-Stack Developer & Problem Solver"
+	description="From hospitality in Granada to building web apps in London. Learn about my journey, coding philosophy, and what drives me as a full-stack developer and lifelong learner."
+	image="/about-seo-image.webp"
+>
 	<AboutHeroSection />
 	<MyApproachSection />
 	<MyPersonalSideSection />
