--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@font-face {
+  font-family: 'Groote';
+  src: url('/public/fonts/Groote.woff') format('woff');
+  font-weight: bold ;
+  font-style: normal;
+  font-display: swap;
+}
+
+
 @layer base {
   :root {
     --color-background: #ffffff;
@@ -115,6 +125,10 @@
 
   .font-body {
     font-family: 'Inter', sans-serif;
+  }
+
+  .font-logo{
+    font-family: 'groote'
   }
 
   /* Styles for Navigation */
