--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,22 +10,22 @@ import ContactFormSection from '../components/sections/contact/ContactFormSectio
 const companies = [
   {
     name: "El Dorado",
-    logo: "public/elDoradoLogo.webp",
+    logo: "/elDoradoLogo.webp",
     alt: "El Dorado logo"
   },
   {
     name: "IbetjoClean",
-    logo: "public/ibetjoLogo.webp", 
+    logo: "/ibetjoLogo.webp", 
     alt: "IbetjoClean logo"
   },
   {
     name: "IberoSucre",
-    logo: "public/iberosucreLogo.webp",
+    logo: "/iberosucreLogo.webp",
     alt: "IberoSucre logo"
   },
   {
 	name: "UWTS University",
-	logo: "public/uwtsdLogo.webp",
+	logo: "/uwtsdLogo.webp",
 	alt: "UWTS University logo"
   }
 ];
