--- a/src/components/sections/contact/ContactHeroSection.astro
+++ b/src/components/sections/contact/ContactHeroSection.astro
@@ -5,7 +5,7 @@
 <section class="relative min-h-[70vh] bg-white overflow-hidden flex items-center justify-start">
   <div
     class="absolute inset-0 w-full h-full bg-center bg-cover animate-slow-zoom"
-    style="background-image: url('/public/contact.webp');"
+    style="background-image: url('https://i.ibb.co/prrWh5Fn/contact.webp');"
   ></div>
 
     <div class="relative z-20 max-w-7xl mx-auto px-4 lg:px-8">
